# rcbkdipole

./: CMakeLists.txt  README.md
data/Au/mv1/: glauber_mv1_0  glauber_mv1_10  glauber_mv1_12  glauber_mv1_14  glauber_mv1_16  glauber_mv1_18  glauber_mv1_2  glauber_mv1_20  glauber_mv1_22  glauber_mv1_24  glauber_mv1_26  glauber_mv1_28  glauber_mv1_30  glauber_mv1_32  glauber_mv1_34  glauber_mv1_36  glauber_mv1_38  glauber_mv1_4  glauber_mv1_40  glauber_mv1_6  glauber_mv1_8
data/Au/mve/: glauber_mve_0  glauber_mve_10  glauber_mve_12  glauber_mve_14  glauber_mve_16  glauber_mve_18  glauber_mve_2  glauber_mve_20  glauber_mve_22  glauber_mve_24  glauber_mve_26  glauber_mve_28  glauber_mve_30  glauber_mve_32  glauber_mve_34  glauber_mve_36  glauber_mve_38  glauber_mve_4  glauber_mve_40  glauber_mve_6  glauber_mve_8
data/Pb/mv1/: glauber_mv1_0  glauber_mv1_10  glauber_mv1_12  glauber_mv1_14  glauber_mv1_16  glauber_mv1_18  glauber_mv1_2  glauber_mv1_20  glauber_mv1_22  glauber_mv1_24  glauber_mv1_26  glauber_mv1_28  glauber_mv1_30  glauber_mv1_32  glauber_mv1_34  glauber_mv1_36  glauber_mv1_38  glauber_mv1_4  glauber_mv1_40  glauber_mv1_6  glauber_mv1_8
data/Pb/mve/: glauber_mve_0  glauber_mve_10  glauber_mve_12  glauber_mve_14  glauber_mve_16  glauber_mve_18  glauber_mve_2  glauber_mve_20  glauber_mve_22  glauber_mve_24  glauber_mve_26  glauber_mve_28  glauber_mve_30  glauber_mve_32  glauber_mve_4  (+2 more)
src/: CMakeLists.txt  amplitudelib.cpp  amplitudelib.hpp  datafile.cpp  datafile.hpp  dipole_amplitude.cpp  interpolation.cpp  interpolation.hpp  tools.cpp  tools.hpp
